# SMB-Loyalty-Program

./: .coverage  .gitignore  API_DOCUMENTATION.md  AUTHENTICATION_FLOW_ANALYSIS.md  AUTHENTICATION_IMPROVEMENTS_SUMMARY.md  AUTHENTICATION_TASKS_SUMMARY.md  AUTHENTICATION_TESTING_GUIDE.md  AZURE_DEPLOYMENT_OVERVIEW.md  AZURE_DEPLOYMENT_STEPS.md  BUILD_FIX_SUMMARY.md  CHANGES_2025-09-18.md  COMPLETE_TASKS_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_HARDENING.md  END_USER_PAGES_REBUILD_COMPLETE.md  END_USER_UI_REBUILD.md  END_USER_UI_WHITE_BACKGROUND_UPDATE.md  FIREBASE_SETUP.md  FRONTEND_INTEGRATION_GUIDE.md  HIGH_PRIORITY_TASKS_COMPLETE.md  IMPORT_ISSUES_RESOLUTION.md  INSIGHTS_HISTORY_COMPLETE.md  LAUNCH_FEATURES_TESTING_GUIDE.md  LAUNCH_READINESS_CHECKLIST.md  LAUNCH_STATUS_FINAL.md  LOGOUT_BUTTON_FIX.md  Makefile  PAYMENT_VERIFICATION_UI_FIX.md  PHASE_2_CARD_NESTING_AUDIT.md  PHASE_2_COMPLETE.md  PHASE_3_4_FRONTEND_PERF_COMPLETE.md  PHASE_3_BACKEND_COMPLETE.md  PHASE_3_COMPLETE.md  PHASE_5_RATE_LIMITING_PLAN.md  POST_DEPLOYMENT_STABILIZATION.md  PRODUCTION_DEPLOYMENT.md  PRODUCTION_HARDENING_NEXT.md  PROFESSIONAL_UI_TEXT_FIX.md  README.md  RELEASE_FLOW.md  (+41 more)
.github/: WORKFLOWS.md  copilot-instructions.md  dependabot.yml
.github/instructions/: Server run.instructions.md
.github/workflows/: azure-static-web-apps-gray-river-01eda360f.yml  backend-azure-containerapps.yml  backend-bootstrap-db.yml  backend-ci.yml  backend-migrate.yml  backend-quality.yml  backend-trivy-scan.yml  ci.yml  codeql.yml  containerapp-configure-env.yml  deploy.yml  e2e-tests.yml  frontend-ci.yml  frontend-configure-vars.yml  post-deploy-smoke.yml  release-backend.yml  release-frontend.yml  secret-scan.yml
Backend/: .coverage  .dockerignore  .env.example  .env.local.example  .env.production.example  .gitignore  DEPRECATION_AMOUNT_FIELD.md  Dockerfile  __init__.py  alembic.ini  backfill_multivertical.py  config.py  conftest.py  database.py  dev-requirements.txt  dev.db.bak.1756712078  init_db.py  main.py  models.py  nohup.out  pytest.ini  requirements.in  requirements.txt  schemas.py  seed_all.py  seed_default_tenant.py  seed_rewards.py  seed_services.py  seed_users.py  sitecustomize.py  update_prices.py  users.py
Backend/.devcontainer/: devcontainer.json
Backend/alembic/: env.py
Backend/alembic/versions/: 0001_add_user_id_to_users.py  0002_create_orders_and_vehicles.py  20250829_add_perf_indexes.py  20250830_add_aggregated_customer_metrics.py  20250831_add_audit_logs_table.py  20250831_add_multivertical_fields.py  20250831_add_roles_enum_column_update.py  20250831_autogen_multivertical_fields.py  20250831_enable_rls.py  20250901_add_tenant_branding_table.py  20250901_add_tenant_loyalty_payment_columns.py  20251004_add_tenant_integrations.py  20251006_add_tenant_logo_theme.py  20251006_add_tenant_subdomain.py  871a3def7395_baseline_schema.py  add_inventory_items_placeholder.py
Backend/app/: __init__.py  main.py  models.py
Backend/app/analytics/: refresh_customers.py
Backend/app/core/: __init__.py  audit.py  audit_safe.py  authz.py  client_ip.py  clock.py  database.py  errors.py  jobs.py  logging_config.py  plugin_manager.py  rate_limit.py  tenant_context.py  wash_lifecycle.py
Backend/app/routes/: customers.py  health.py  notifications.py  observability.py  onboarding.py  ops.py  profile.py  reports.py  secure.py
Backend/app/services/: business_onboarding.py  secret_vault.py  subscription_billing.py  tenant_settings.py
Backend/app/tests/: conftest.py  (+2 more)
Backend/loadtests/: basic_traffic.js
Backend/model/: user.py
Backend/routes/: auth.py  catalog.py  loyalty.py  orders.py  payments.py
Backend/scripts/: check_migration_drift.py  dump_openapi.py  freeze_backend_deps.sh  seed_default_tenant.py  seed_default_tenant_raw.py  seed_tenant_production.py  sync_prod_to_sqlite.py  update_openapi_snapshot.sh
Backend/static/: index.html
Backend/tests/: conftest.py  openapi_snapshot.json  test_access_log_middleware.py  test_analytics_cache.py  test_analytics_refresh_job.py  test_audit_logs.py  test_auth.py  test_authz_roles.py  test_branding_asset_upload.py  test_business_analytics.py  test_catalog.py  test_client_ip.py  test_customer_refresh_auth.py  test_customers_admin.py  test_dev.py  test_dev_audit_and_overrides.py  test_edge_cases.py  test_full_flow.py  test_health_endpoints.py  test_history_endpoint.py  test_inventory_routes.py  test_jobs.py  test_jobs_dead_letter_and_audit.py  test_loyalty.py  test_main.py  test_observability.py  test_observability_metrics.py  test_openapi_contract.py  test_openapi_snapshot.py  test_ops_status.py  test_orders.py  test_payments.py  test_provision_flow.py  test_public_rate_limit_exceed.py  test_rate_limit.py  test_rate_limit_adv.py  test_reports_routes.py  test_rls.py  test_rls_regression.py  test_schema_migrations.py  (+10 more)
Backend/utils/: firebase_admin.py  qr.py
Frontend/: .env  .env.example  .eslintrc.json  .firebaserc  .gitignore  ADMIN_UI_REFINEMENT.md  ADMIN_UI_VISUAL_GUIDE.md  Dockerfile  PERFORMANCE_BASELINE.md  README-API_BASE_URL.md  README.md  audit-all.json  audit-prod.json  build-safe.sh  bundle-stats.html  cypress.config.ts  eslint.config.js  firebase.json  index.html  nginx.conf  package-lock.json  package.json  scaffold_frontend.sh  serve.js  staticwebapp.config.json  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.ts
Frontend/Frontend/: package-lock.json  package.json
Frontend/src/: App.autoLogin.test.tsx  App.jsx  App.test.tsx  App.tsx  firebase.ts  index.css  main.jsx  main.tsx  react-qr-scanner.d.ts  setupTests.ts  types.ts
_legacy_backup/routes_backup_20250822/: orders.py  payments.py
app/: __init__.py
docs/: OPERATIONS_RUNBOOK.md  dev_env_isolation.md  tenant_config_inventory.md
scripts/: build_push_backend.sh  build_push_frontend.sh  containerapp_backend_helper.sh  post_deploy_smoke.sh  sync_frontend_vite_env_to_github.sh  update_cors_regex_and_roll.sh  wait_revision_healthy.sh
static/: README.txt
tests/: test_payments_contract.py  test_rate_limit_ban.py
(+383 files in other folders)
